day-18 project updated